--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -22,6 +22,7 @@
   font-weight: bold;
   font-size: 2rem;
   border: 3px solid #f1f1f1;
+  border-radius: 5px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,14 +32,28 @@
   padding: 1rem;
   text-align: center;
   max-width: 900px;
+  transition: 200ms all ease-in-out;
+}
+
+.bgText:hover {
+  box-shadow: 2px 5px 5px 4px rgba(22, 22, 22, 0.692);
+}
+
+.titleTechStack {
+  font-family: Nunito;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 2rem;
+  color: rgba(189, 50, 50, 0.8);
 }
 
 .techStack {
-  margin: 2rem auto;
+  margin: 1.2rem auto;
   max-width: 900px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   grid-gap: 1rem;
+  padding: 1rem;
 }
 
 .techItem {
@@ -48,6 +63,13 @@
   align-items: center;
   border: 2px solid rgb(235, 81, 81);
   border-radius: 5px;
+  box-shadow: 0px 3px 3px 2px rgba(235, 81, 81, 0.3);
+  transition: 200ms all ease-in;
+}
+
+.techItem:hover {
+  box-shadow: 1px 3px 4px 2px rgba(235, 81, 81, 0.3);
+  transform: scale(1.07);
 }
 
 .titleName {
