--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   left: 0;
-  bottom: -10;
+  bottom: -1f0;
   right: 0;
   width: 100%;
   background-color: rgb(235, 81, 81);
