--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,34 +6,32 @@ font-family: "Roboto Mono", monospace;
 */
 
 .header {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   width: 100%;
-  height: 75px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 2px rgb(241, 88, 88);
 }
 
 a {
   text-decoration: none;
 }
 
-.title h1 {
-  transition: 500ms all ease-in;
-  margin: 1rem;
+.title {
+  transition: 250ms all ease-in;
 }
 
 .title a {
-  border: 5px solid rgb(233, 25, 25);
-  padding: 0.5rem;
-  font-family: "Merriweather", serif;
-  color: rgb(233, 25, 25);
+  padding: 0.6rem;
+  font-family: "Nunito", sans-serif;
+  background-color: rgb(241, 88, 88);
+  color: #fff;
+  transition: all 250ms ease-in-out;
 }
 
-.title:hover {
-  transform: rotate(-90deg);
-}
-.name:hover {
+.title a:hover {
   transform: rotate(0deg);
 }
 
@@ -51,11 +49,14 @@ a {
 }
 
 .navigation a {
-  color: #b10606;
+  color: rgb(241, 88, 88);
+  font-size: 1.2rem;
   font-family: "Nunito", sans-serif;
+  font-weight: 600;
   transition: all 300ms ease-in-out;
+  letter-spacing: 0.1rem;
 }
 
 .navigation a:hover {
-  color: rgb(233, 25, 25);
+  color: rgb(219, 56, 56);
 }
