--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,7 +6,7 @@ font-family: "Roboto Mono", monospace;
 */
 
 .header {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1px;
   width: 100%;
   height: 60px;
   display: flex;
@@ -43,7 +43,7 @@ a {
 .navigation {
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 1.2rem;
 }
@@ -52,7 +52,7 @@ a {
   color: rgb(241, 88, 88);
   font-size: 1.2rem;
   font-family: "Nunito", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   transition: all 300ms ease-in-out;
   letter-spacing: 0.1rem;
 }
