--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -1,12 +1,9 @@
 .bgImage {
   width: 100%;
-  height: calc(100vh - 68px);
+  height: calc(100vh - 60px);
   /* The image used */
   background-image: url("../../images/coding-image.jpg");
-
   /* Add the blur effect */
-  filter: blur(4px);
-  -webkit-filter: blur(4px);
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -24,15 +21,30 @@
   border: 3px solid #f1f1f1;
   border-radius: 5px;
   position: absolute;
+  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   z-index: 2;
   width: 100%;
   padding: 1rem;
   text-align: center;
   max-width: 900px;
   transition: 200ms all ease-in-out;
+  animation: mymove 2s;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+@keyframes mymove {
+  from {
+    transform: translateY(100%);
+    transform: translate(-50%, 50%);
+    overflow: hidden;
+  }
+  to {
+    transform: translateY(0);
+    transform: translate(-50%, -50%);
+  }
 }
 
 .name {
@@ -71,7 +83,7 @@
   border: 2px solid rgb(235, 81, 81);
   border-radius: 5px;
   box-shadow: 0px 3px 3px 2px rgba(235, 81, 81, 0.3);
-  transition: 200ms all ease-in;
+  transition: 200ms all ease-in-out;
 }
 
 .techItem:hover {
