--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,12 +1,22 @@
 .footer {
-  position: relative;
+  position: static;
+  bottom: 0;
   left: 0;
-  bottom: -1f0;
-  right: 0;
   width: 100%;
-  background-color: rgb(235, 81, 81);
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3b3838;
   color: #fff;
-  text-align: center;
   font-family: Nunito;
   font-size: 1rem;
+  margin: 0;
+  padding: 0;
+  border-top: 2px solid rgb(235, 81, 81);
+}
+
+.footer h1 {
+  margin: 0;
+  padding: 0;
 }
