--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,13 +6,13 @@ font-family: "Roboto Mono", monospace;
 */
 
 .header {
-  margin-bottom: 1px;
   width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px rgb(241, 88, 88);
+  border-bottom: 2px solid rgb(241, 88, 88);
+  background-color: #3b3838;
 }
 
 a {
@@ -49,7 +49,7 @@ a {
 }
 
 .navigation a {
-  color: rgb(241, 88, 88);
+  color: #fff;
   font-size: 1.2rem;
   font-family: "Nunito", sans-serif;
   font-weight: 500;
@@ -58,5 +58,5 @@ a {
 }
 
 .navigation a:hover {
-  color: rgb(219, 56, 56);
+  color: rgb(241, 88, 88);
 }
