--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -12,8 +12,12 @@
 }
 
 .bgText {
+  width: 100%;
+  max-width: 1000px;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
   color: white;
   font-family: "Roboto Mono", monospace;
   font-weight: bold;
@@ -25,21 +29,38 @@
   top: 50%;
   left: 50%;
   z-index: 2;
-  width: 100%;
   padding: 1rem;
   text-align: center;
-  max-width: 900px;
   transition: 200ms all ease-in-out;
   animation: mymove 2s;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(4px);
+}
+
+@media only screen and (max-width: 900px) {
+  .bgText {
+    width: 70%;
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .bgText {
+    width: 70%;
+    font-size: 1.3rem;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .bgText {
+    width: 60%;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+  }
 }
 
 @keyframes mymove {
   from {
     transform: translateY(100%);
     transform: translate(-50%, 50%);
-    overflow: hidden;
   }
   to {
     transform: translateY(0);
