--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,10 +1,12 @@
 .contact {
-  height: calc(100vh - 160px);
-  max-width: calc(100vw - 20px);
+  height: calc(100vh - 124px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact h2 {
-  text-align: center;
   font-family: Nunito;
   font-size: 2.6rem;
 }
@@ -17,9 +19,10 @@
 
 .iconsContainer {
   margin: 2rem auto;
-  max-width: 200px;
+  width: 100%;
+  max-width: 400px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .iconsContainer i {
