--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,47 +1,49 @@
 .contact {
-  height: calc(100vh - 124px);
-  width: 100%;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2em;
 }
 
-.contact h2 {
-  font-family: Nunito;
-  font-size: 2.6rem;
-}
-
-.contact p {
-  text-align: center;
-  font-family: Nunito;
-  font-size: 1.5rem;
+.contact h1 {
+  color: var(--main-gray);
+  font-size: 2.6em;
+  margin: 0;
 }
 
 .iconsContainer {
-  margin: 2rem auto;
-  width: 100%;
-  max-width: 400px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  max-width: 200px;
+  padding: 1.2em;
+  border-bottom: 1px solid var(--main-gray);
 }
 
-.iconsContainer i {
-  color: rgb(241, 88, 88);
-  font-size: 3rem;
+.contact span {
+  font-size: 1.5em;
+}
+
+.iconsContainer a {
+  text-decoration: none;
+  color: var(--main-red);
+}
+
+.iconsContainer a i {
+  font-size: 2em;
 }
 
 .emailbar {
-  max-width: 500px;
-  margin: 2rem auto;
-  border-top: 1px solid #ccc;
+  margin-top: 1.5em;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 .emailbar a {
-  color: rgb(241, 88, 88);
-  font-family: Nunito;
-  font-size: 1.5rem;
+  text-decoration: none;
+  color: var(--main-red);
+  font-size: 1.5em;
 }
