--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,22 +1,9 @@
 .footer {
-  position: static;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
   display: flex;
+  width: calc(100% - 4em);
   justify-content: center;
   align-items: center;
-  background-color: #3b3838;
-  color: #fff;
-  font-family: Nunito;
-  font-size: 1rem;
-  margin: 0;
-  padding: 0;
-  border-top: 2px solid rgb(235, 81, 81);
-}
-
-.footer h1 {
-  margin: 0;
-  padding: 0;
+  padding: 2em;
+  color: var(--white);
+  background-color: var(--main-gray);
 }
