--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --main-red: rgb(250, 75, 75);
   --main-gray: rgb(63, 63, 63);
   --white: seashell;
+  --peach: rgb(255, 235, 235);
 }
 
 body {
@@ -19,5 +20,5 @@ body {
 }
 
 #root {
-  background-image: linear-gradient(to bottom, var(--main-red), var(--white));
+  background-color: rgb(255, 235, 235);
 }
