--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -13,8 +13,9 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 100px;
+  height: 200px;
   z-index: 10000;
+  background: linear-gradient(to top, var(--peach), transparent);
 }
 
 .hero:after {
