--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,500;0,600;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap");
 
 $text-size: 2rem;
 $color-main: #7b2fba;
@@ -8,7 +8,7 @@ $color-lighten: #d6b1f5;
 $color-complemet: #9ae75b;
 $color-bg-dark: #222222;
 $body-font: "Nunito", sans-serif;
-$title-font: "Roboto Mono", monospace;
+$title-font: "Lobster Two", cursive;
 $body-font-weight: 500;
 
 *,
@@ -34,5 +34,40 @@ body {
   margin: 0;
   padding: 0;
   color: #000;
-  background-color: $color-bg-dark;
+  background-color: $color-lighten;
+}
+
+@media screen and (min-width: 700px) {
+  .app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+
+    .container {
+      width: 100%;
+      background-color: $color-bg-dark;
+      height: 100%;
+      min-height: 600px;
+      box-shadow: 3px 3px 3px rgba($color: $color-dark, $alpha: 0.4);
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    .container {
+      width: 100%;
+      min-height: 100vh;
+      background-color: $color-bg-dark;
+      margin-bottom: 1rem;
+    }
+  }
 }
