--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -3,8 +3,7 @@
 .contact-page {
   margin-top: 2rem;
   width: 100%;
-  max-width: 1337px;
-  min-height: 500px;
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -17,69 +16,24 @@
     font-family: $title-font;
   }
 
-  .social-links {
+  .icons-social {
     width: 100%;
+    height: 100%;
     max-width: 500px;
-    background-color: $color-main;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    padding: 0 1.2rem;
-    border-radius: 0.5rem;
-
-    h3 {
-      color: $color-complemet;
-      font-size: 2rem;
-      margin: 0.3rem 0;
-      font-family: $title-font;
-    }
-
-    .icons-social {
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      margin: 2rem;
-    }
-
-    i {
-      font-size: 2.5rem;
-      color: $color-dark;
-      transition: 150ms all ease-in-out;
-
-      &:hover {
-        color: $color-lighten;
-        cursor: pointer;
-      }
-    }
+    margin: 2rem;
   }
 
-  .email-icon {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  i {
+    font-size: 2.5rem;
+    color: $color-lighten;
+    transition: 150ms all ease-in-out;
 
-    h3 {
+    &:hover {
       color: $color-complemet;
-      font-size: 1.5rem;
-      margin: 0.2rem 0;
-      font-family: $title-font;
-    }
-
-    a {
-      text-decoration: none;
-      margin-top: 2rem;
-
-      i {
-        font-size: 2.5rem;
-        color: $color-main;
-        transition: 150ms all ease-in-out;
-
-        &:hover {
-          color: $color-lighten;
-          cursor: pointer;
-        }
-      }
+      cursor: pointer;
     }
   }
 }
