--- a/src/components/hero/style.scss
+++ b/src/components/hero/style.scss
@@ -1,96 +1,190 @@
 @import "../../App.scss";
 
-.banner {
-  min-height: 700px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  max-width: 1337px;
-  margin-right: auto;
-  margin-left: auto;
+@media screen and (min-width: 600px) {
+  .banner {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    margin-right: auto;
+    margin-left: auto;
 
-  .lines {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: calc(100% - 2.3rem);
-
-    .line {
+    .lines {
       position: absolute;
-      width: 0.15rem;
-      height: 100%;
       top: 0;
-      left: 50%;
-      background: rgba(255, 255, 255, 0.1);
-      overflow: hidden;
+      left: 0;
+      right: 0;
+      height: 100%;
+      width: calc(100% - 1.3rem);
 
-      &::after {
-        content: "";
-        display: block;
+      .line {
         position: absolute;
-        height: 15vh;
-        width: 100%;
-        top: -50%;
-        left: 0;
-        box-shadow: 2px 0px 3px rgba($color: $color-lighten, $alpha: 1);
-        background: linear-gradient(
-          to bottom,
-          rgba(255, 255, 255, 0) 0%,
-          $color-dark,
-          $color-main,
-          $color-lighten
-        );
-        animation: run 8s 0s infinite;
-        animation-fill-mode: forwards;
-        animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
-      }
-      &:nth-child(1) {
-        margin-left: -25%;
+        width: 0.15rem;
+        height: 100%;
+        top: 0;
+        left: 50%;
+        background: rgba(255, 255, 255, 0.1);
+        overflow: hidden;
 
         &::after {
-          animation-delay: 1s;
+          content: "";
+          display: block;
+          position: absolute;
+          height: 15vh;
+          width: 100%;
+          top: -50%;
+          left: 0;
+          box-shadow: 2px 0px 3px rgba($color: $color-lighten, $alpha: 1);
+          background: linear-gradient(
+            to bottom,
+            rgba(255, 255, 255, 0) 0%,
+            $color-dark,
+            $color-main,
+            $color-lighten
+          );
+          animation: run 8s 0s infinite;
+          animation-fill-mode: forwards;
+          animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+        }
+        &:nth-child(1) {
+          margin-left: -25%;
+
+          &::after {
+            animation-delay: 1s;
+          }
+        }
+
+        &:nth-child(3) {
+          margin-left: 25%;
+
+          &::after {
+            animation-delay: 1.5s;
+          }
         }
       }
+    }
 
-      &:nth-child(3) {
-        margin-left: 25%;
+    .text {
+      position: absolute;
+      top: 35%;
+      width: 100%;
+      height: 10rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      max-width: 45rem;
+      margin: 0 auto;
+      color: $color-complemet;
+      font-family: $title-font;
+      background-color: rgba($color: $color-dark, $alpha: 0.8);
+      padding: 1rem;
+      border-bottom: 1px solid $color-main;
+      border-radius: 0.3rem;
+      box-shadow: 0px 2px 2px rgba($color: $color-lighten, $alpha: 0.7);
 
-        &::after {
-          animation-delay: 1.5s;
-        }
+      h1 {
+        font-size: 3rem;
+        margin: 0;
+      }
+      h2 {
+        font-size: 2.5rem;
+        margin: 0;
+      }
+      h3 {
+        font-size: 2rem;
+        margin: 0;
       }
     }
   }
+}
 
-  .text {
-    position: absolute;
-    top: 35%;
-    width: 100%;
-    max-width: 45rem;
-    margin: 0 auto;
-    color: $color-complemet;
-    font-family: $title-font;
-    background-color: rgba($color: $color-dark, $alpha: 0.8);
-    padding: 1rem;
-    border-bottom: 1px solid $color-main;
-    border-radius: 0.3rem;
-    box-shadow: 0px 2px 2px rgba($color: $color-lighten, $alpha: 0.7);
+@media screen and (max-width: 650px) {
+  .banner {
+    height: calc(100vh - 60px);
 
-    h1 {
-      font-size: 3rem;
-      margin: 0;
+    .lines {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: calc(100% - 60px);
+      width: calc(100% - 0.5rem);
+
+      .line {
+        position: absolute;
+        width: 0.15rem;
+        height: 100%;
+        top: 0;
+        left: 50%;
+        background: rgba(255, 255, 255, 0.1);
+        overflow: hidden;
+
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          height: 20vh;
+          width: 100%;
+          top: -50%;
+          left: 0;
+          box-shadow: 2px 0px 3px rgba($color: $color-lighten, $alpha: 1);
+          background: linear-gradient(
+            to bottom,
+            rgba(255, 255, 255, 0) 0%,
+            $color-dark,
+            $color-main,
+            $color-lighten
+          );
+          animation: run 8s 0s infinite;
+          animation-fill-mode: forwards;
+          animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+        }
+        &:nth-child(1) {
+          margin-left: -25%;
+
+          &::after {
+            animation-delay: 1s;
+          }
+        }
+
+        &:nth-child(3) {
+          margin-left: 25%;
+
+          &::after {
+            animation-delay: 1.5s;
+          }
+        }
+      }
     }
-    h2 {
-      font-size: 2.5rem;
-      margin: 0;
-    }
-    h3 {
-      font-size: 2rem;
-      margin: 0;
+
+    .text {
+      position: absolute;
+      top: 35%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 10rem;
+      margin: 0 auto;
+      color: $color-complemet;
+      font-family: $title-font;
+      background-color: rgba($color: $color-dark, $alpha: 0.8);
+      padding: 1rem;
+      border-bottom: 1px solid $color-main;
+      box-shadow: 0px 2px 2px rgba($color: $color-lighten, $alpha: 0.7);
+
+      h2 {
+        font-size: 2.5rem;
+        margin: 0;
+      }
+      h3 {
+        font-size: 1.5rem;
+        margin: 0;
+      }
     }
   }
 }
