--- a/src/components/projects/style.scss
+++ b/src/components/projects/style.scss
@@ -23,8 +23,7 @@
     padding: 0;
 
     .p-item {
-      height: 16rem;
-      width: 15rem;
+      max-width: 16rem;
       list-style: none;
       margin: 1rem;
       border: 4px solid $color-main;
