--- a/src/App.scss
+++ b/src/App.scss
@@ -21,53 +21,26 @@ html {
   scroll-behavior: smooth;
 }
 
-@keyframes run {
-  0% {
-    top: -50%;
-  }
-  100% {
-    top: 110%;
-  }
-}
-
 body {
   margin: 0;
   padding: 0;
-  color: #000;
-  background-color: $color-lighten;
+  background: linear-gradient(
+      117.81deg,
+      #2ae7e7 0.54%,
+      rgba(255, 255, 255, 0) 94.42%
+    ),
+    #092c62;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-@media screen and (min-width: 700px) {
-  .app {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-
-    .container {
-      width: 100%;
-      background-color: $color-bg-dark;
-      height: 100%;
-      min-height: 600px;
-      box-shadow: 3px 3px 3px rgba($color: $color-dark, $alpha: 0.4);
-    }
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .app {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-
-    .container {
-      width: 100%;
-      min-height: 100vh;
-      background-color: $color-bg-dark;
-      margin-bottom: 1rem;
-    }
-  }
+.app {
+  width: 100%;
+  height: 100vh;
+  max-width: 1200px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: auto;
 }
