--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -1,77 +1,30 @@
 @import "../../App.scss";
 
-@media screen and (min-width: 700px) {
-  nav {
-    background-color: $color-dark;
-    height: 100%;
-    width: 100%;
-    max-width: 100px;
-    box-shadow: 3px 3px 3px rgba($color: $color-dark, $alpha: 0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 250ms ease-in;
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10%;
+  padding: 10px 20px;
 
-    ul {
-      height: 80%;
-      padding: 1.5rem 0rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
+  .logo {
+    font-size: 2rem;
+    text-shadow: 0px 1px 2px #111111;
+    font-weight: 600;
+  }
 
-      li {
-        list-style: none;
+  .project {
+    border-bottom: 2px solid #fff;
+    transition: all 200ms ease-in-out;
 
-        a {
-          color: $color-complemet;
-          text-decoration: none;
-          transition: 300ms all ease-in-out;
-
-          i {
-            font-size: 1.7rem;
-
-            &:hover {
-              transform: scale(1.1);
-            }
-          }
-        }
-      }
+    &:hover {
+      border-bottom: 2px solid #fffc50;
     }
   }
-}
 
-@media screen and (max-width: 700px) {
-  nav {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $color-dark;
-
-    ul {
-      width: 100%;
-      padding: 0;
-      display: flex;
-      justify-content: space-around;
-      margin: 0;
-
-      li {
-        list-style: none;
-
-        a {
-          text-decoration: none;
-
-          i {
-            font-size: 1.7rem;
-            color: $color-complemet;
-          }
-        }
-      }
-    }
+  a {
+    color: #fff;
+    text-decoration: none;
   }
 }
