--- a/src/components/projects/style.scss
+++ b/src/components/projects/style.scss
@@ -1,55 +1,41 @@
 @import "../../App.scss";
 
 .projects {
-  min-height: 500px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 10px 20px;
+  color: #ffffff;
 
   h2 {
-    color: $color-complemet;
-    font-size: 2.5rem;
-    margin: 1.2rem 0;
-    font-family: $title-font;
+    text-shadow: 0px 1px 2px #111111;
+    margin: 0%;
   }
 
-  .projects-items {
+  ul {
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
+    padding-left: 0;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    padding: 0;
 
-    .p-item {
-      max-width: 16rem;
+    li {
       list-style: none;
-      margin: 1rem;
-      border: 4px solid $color-main;
-      border-radius: 0.5rem;
-      transition: 250ms all ease-in-out;
-
-      &:hover {
-        box-shadow: 0px 4px 3px rgba($color: $color-complemet, $alpha: 0.4);
-        border: 4px solid $color-complemet;
-      }
+      margin: 10px;
+      background: #092c62;
+      box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.4);
 
       a {
         text-decoration: none;
-        color: $color-complemet;
-        font-family: $body-font;
+        color: #ffffff;
         display: flex;
         flex-direction: column;
-        align-items: center;
 
         img {
-          max-width: 100%;
+          max-width: 250px;
         }
 
         span {
+          margin: 1rem;
           font-size: 1.2rem;
-          margin-top: 0.2rem;
         }
       }
     }
